--- a/src/BPlusTree.Test/BPlusTree.Test.csproj
+++ b/src/BPlusTree.Test/BPlusTree.Test.csproj
@@ -53,7 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="dictionary_should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
