--- a/src/BPlusTree/BPlusTree.csproj
+++ b/src/BPlusTree/BPlusTree.csproj
@@ -41,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\Configuration.cs" />
+    <Compile Include="Config\Default_Binary_Serializer.cs" />
     <Compile Include="Core\BPTree.cs" />
     <Compile Include="Core\BPTree.persistence.cs" />
     <Compile Include="Core\BPTree.Statistics.cs" />
     <Compile Include="Core\Cache_LRU.cs" />
     <Compile Include="Core\Data.cs" />
+    <Compile Include="Core\Exceptions\BpTreeException.cs" />
     <Compile Include="Core\ISerializable.cs" />
     <Compile Include="Core\Metadata.cs" />
     <Compile Include="Core\Node.cs" />
@@ -63,6 +66,7 @@
     <Compile Include="Core\Unsafe_Utilities.cs" />
     <Compile Include="Data_Structures\Basic_Heap.cs" />
     <Compile Include="IBPTree.cs" />
+    <Compile Include="Persistent_Dictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stream_Factory.cs" />
     <Compile Include="String_BPTree.cs" />
