--- a/src/BPlusTree/BPlusTree.csproj
+++ b/src/BPlusTree/BPlusTree.csproj
@@ -49,7 +49,9 @@
     <Compile Include="Core\Cache_LRU.cs" />
     <Compile Include="Core\Data.cs" />
     <Compile Include="Core\Exceptions\BpTreeException.cs" />
+    <Compile Include="Core\IData_Reader.cs" />
     <Compile Include="Core\ISerializable.cs" />
+    <Compile Include="Core\Leafs_Enumerator.cs" />
     <Compile Include="Core\Metadata.cs" />
     <Compile Include="Core\Node.cs" />
     <Compile Include="Core\Node_Factory.cs" />
