--- a/src/BPlusTree/BPlusTree.csproj
+++ b/src/BPlusTree/BPlusTree.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>BPlusTree</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,7 +53,9 @@
     <Compile Include="Core\Data.cs" />
     <Compile Include="Core\Exceptions\BpTreeException.cs" />
     <Compile Include="Core\IData_Reader.cs" />
-    <Compile Include="Core\ISerializable.cs" />
+    <Compile Include="Core\Serializers\ISerializer.cs" />
+    <Compile Include="Core\Serializers\IKey_Serializer.cs" />
+    <Compile Include="Core\Serializers\Null_Serializer.cs" />
     <Compile Include="Core\Values_Enumerator.cs" />
     <Compile Include="Core\Metadata.cs" />
     <Compile Include="Core\Node.cs" />
@@ -87,6 +91,7 @@
     <Content Include="TODO.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
