--- a/src/BPlusTree.Test/BPlusTree.Test.csproj
+++ b/src/BPlusTree.Test/BPlusTree.Test.csproj
@@ -55,7 +55,7 @@
   <ItemGroup>
     <Compile Include="dictionary_should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="leafs_right_enumerator_should.cs" />
+    <Compile Include="enumerator_should.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BPlusTree\BPlusTree.csproj">
