--- a/src/BPlusTree/app.config
+++ b/src/BPlusTree/app.config
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
+    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
     <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
   </configSections>
 
   <connectionStrings>
-    <add name="Benchmark" connectionString="Url = http://localhost:8080;Database=Benchmark" />
+    <add name="Benchmark" connectionString="Url = http://localhost:8080;Database=Benchmark"/>
   </connectionStrings>
   
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
   
-  <UnicastBusConfig >
+  <UnicastBusConfig>
     <MessageEndpointMappings>
       <!-- rest of your configuration here -->
       <add Messages="MessageMonitor.Service" Endpoint="MessageMonitor"/>
@@ -30,4 +30,4 @@
     </assemblyBinding>
   </runtime>
 
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
